feat: add topics creation
